---
source: crates/compiler/tests/codegen_test/mod.rs
expression: "Hello {{world}}"

---
const _Vue = Vue

return function render(_ctx, _cache) {
  with (_ctx) {
    const {
      toDisplayString: _toDisplayString, 
    } = _Vue
    return "Hello " + _toDisplayString(world)
  }
}
